typo in comment
20071022091235-b47d3-fa4797fceef3d0c6b256f5df0c89f1f007c3f29e.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -17,7 +17,7 @@ Description:
         and tools.
 Category: Distribution
 Build-Type: Custom
--- Even though we do use the default Setup.lhs it's vital to bootstraping
+-- Even though we do use the default Setup.lhs it's vital to bootstrapping
 -- that we build Setup.lhs using our own local Cabal source code.
 
 Extra-Source-Files:
