--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -28,9 +28,10 @@ Flag small_base
 
 Library
   if flag(small_base)
-    Build-Depends: base, filepath, pretty, directory, old-time, process, containers
+    Build-Depends: base >= 3, pretty, directory, old-time, process, containers
   else
-    Build-Depends: base, filepath
+    Build-Depends: base < 3
+  Build-Depends: filepath
 
   if impl(ghc < 6.3)
     Build-Depends: unix
