Only use ld -x on systems where ld supports that.
Hopefully this fixes it for both ordinary builds and via ghc makefiles.

20071023183738-adfee-0558ce9170e6ddbb7271a0c96bacab99fe4a811b.gz

--- a/Distribution/Simple/GHC/Makefile.in
+++ b/Distribution/Simple/GHC/Makefile.in
@@ -73,7 +73,7 @@ all ::  $(GHCI_LIB)
 
 $(GHCI_LIB) : $(HS_OBJS) $(C_OBJS)
 	@$(RM) $@
-	$(LD) -r -x -o $@ $(EXTRA_LD_OPTS) $(HS_OBJS) `$(MKSTUBOBJS)` $(C_OBJS)
+	$(LD) -r -o $@ $(EXTRA_LD_OPTS) $(HS_OBJS) `$(MKSTUBOBJS)` $(C_OBJS)
 endif
 endif
 
