--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,4 +1,4 @@
-TOP = ../..
+TOP = ../../..
 
 ifeq "$(findstring boilerplate.mk, $(wildcard $(TOP)/mk/*))" ""
 # ----------------------------------------------------------------------------
