put the binary-dist copy in the right place
20071026132515-760e2-1477657da89634b26a5669c394a909305f1e9b60.gz

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -16,6 +16,7 @@ else # boilerplate.mk exists
 
 include $(TOP)/mk/boilerplate.mk
 
+DOC_SUBDIR=libraries/Cabal/doc
 XML_DOC = Cabal
 INSTALL_XML_DOC = $(XML_DOC)
 
