Refactor: move UserHooks into it's own module
20071114150659-adfee-430d3ca97ae97d0cc427e70db6d19e968f86fd54.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -71,6 +71,7 @@ Library
         Distribution.Simple.Setup,
         Distribution.Simple.SetupWrapper,
         Distribution.Simple.SrcDist,
+        Distribution.Simple.UserHooks,
         Distribution.Simple.Utils,
         Distribution.System,
         Distribution.Verbosity,
