Add Command module to exposed-modules
20071116145234-adfee-35ff6446e547af83eaf3cb4ae057ec1683ebd8c6.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -52,6 +52,7 @@ Library
         Distribution.ParseUtils,
         Distribution.Simple,
         Distribution.Simple.Build,
+        Distribution.Simple.Command,
         Distribution.Simple.Compiler,
         Distribution.Simple.Configure,
         Distribution.Simple.GHC,
