Implement QA for PackageDescription
Addresses #191 (QA) and #180 (QA for missing license).
This patch only adds a new exposed module, it's not yet used anywhere.

20080117223610-fdf66-fd432609d30564af735392d6307d966548fd5dae.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -48,6 +48,7 @@ Library
         Distribution.Make,
         Distribution.Package,
         Distribution.PackageDescription,
+        Distribution.PackageDescription.QA,
         Distribution.Configuration,
         Distribution.ParseUtils,
         Distribution.Simple,
