Split Distribution.PackageDescription into three other modules
New D.PackageDescription.Types with the types and simple utils
New D.PackageDescription.Parse module for parsing and printing functions.
The sanity check code is moved into the existing QA module.
The public api of Distribution.PackageDescription remains the same.

20080204213306-adfee-1c4b1befbc43fef4e68909712480811ca2411aab.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -49,6 +49,8 @@ Library
         Distribution.Make,
         Distribution.Package,
         Distribution.PackageDescription,
+        Distribution.PackageDescription.Types,
+        Distribution.PackageDescription.Parse,
         Distribution.PackageDescription.QA,
         Distribution.Configuration,
         Distribution.ParseUtils,
