Move cabalVersion, setupMessage and a bunch of paths into differnt modules
New Distribution.Simple.BuildPaths module similar to the .InstallDirs module
to hold all the paths and filenames used during a build.
It's currently somewhat of a miscellaneous collection.

20080205190230-adfee-d83340d39564a9e5d315b5234f930f2e5a2d2a2a.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -56,6 +56,7 @@ Library
         Distribution.ParseUtils,
         Distribution.Simple,
         Distribution.Simple.Build,
+        Distribution.Simple.BuildPaths,
         Distribution.Simple.Command,
         Distribution.Simple.Compiler,
         Distribution.Simple.Configure,
