--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -49,10 +49,9 @@ Library
         Distribution.Make,
         Distribution.Package,
         Distribution.PackageDescription,
-        Distribution.PackageDescription.Types,
+        Distribution.PackageDescription.Configuration,
         Distribution.PackageDescription.Parse,
         Distribution.PackageDescription.QA,
-        Distribution.Configuration,
         Distribution.ParseUtils,
         Distribution.Simple,
         Distribution.Simple.Build,
