--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -65,6 +65,7 @@ Library
         Distribution.Simple.Hugs,
         Distribution.Simple.Install,
         Distribution.Simple.InstallDirs,
+        Distribution.Simple.InstalledPackageIndex,
         Distribution.Simple.JHC,
         Distribution.Simple.LocalBuildInfo,
         Distribution.Simple.NHC,
