Make the GHC.Makefile private
20080215130459-adfee-fa880cf761886ce24f90fc1ae47c46104f86c71a.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -60,7 +60,6 @@ Library
         Distribution.Simple.Compiler,
         Distribution.Simple.Configure,
         Distribution.Simple.GHC,
-        Distribution.Simple.GHC.Makefile,
         Distribution.Simple.Haddock,
         Distribution.Simple.Hugs,
         Distribution.Simple.Install,
@@ -87,5 +86,6 @@ Library
   Other-Modules:
         Distribution.GetOpt,
         Distribution.Compat.TempFile
+        Distribution.Simple.GHC.Makefile
 
   Extensions: CPP
