--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -64,10 +64,10 @@ Library
         Distribution.Simple.Hugs,
         Distribution.Simple.Install,
         Distribution.Simple.InstallDirs,
-        Distribution.Simple.InstalledPackageIndex,
         Distribution.Simple.JHC,
         Distribution.Simple.LocalBuildInfo,
         Distribution.Simple.NHC,
+        Distribution.Simple.PackageIndex,
         Distribution.Simple.PreProcess,
         Distribution.Simple.PreProcess.Unlit,
         Distribution.Simple.Program,
