Add Text instance for Extension and add UnknownExtension constructor
The parse function is ~15x faster than using reads by using a simple
hash table :: Array Char [(String, Extension)]. The hash function is
then just 'head' -- the first letter of the extension name.

20080324150027-adfee-255bb35dd4f1524236e272689d21456951420f74.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -28,7 +28,8 @@ Flag small_base
 
 Library
   if flag(small_base)
-    Build-Depends: base >= 3, pretty, directory, old-time, process, containers
+    Build-Depends: base >= 3, directory, process, old-time,
+                              containers, array, pretty
   else
     Build-Depends: base < 3
   Build-Depends: filepath
