Add new compat modules to Cabal file
20080514022119-3fd76-b60d5af036463f72856022f434ac2b976c499c2a.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -86,6 +86,8 @@ Library
   Other-Modules:
         Distribution.GetOpt,
         Distribution.Compat.TempFile
+        Distribution.Compat.Char
+        Distribution.Compat.Exception
         Distribution.Simple.GHC.Makefile
 
   Extensions: CPP
