Update copyright and authors list in the .cabal file
20080612154444-adfee-1587ff5e49b2ee39bda0259e0f8151df648afd8b.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -1,9 +1,11 @@
 Name: Cabal
 Version: 1.5.2
 Copyright: 2003-2006, Isaac Jones
+           2005-2008, Duncan Coutts
 License: BSD3
 License-File: LICENSE
 Author: Isaac Jones <ijones@syntaxpolice.org>
+        Duncan Coutts <duncan@haskell.org>
 Maintainer: cabal-devel@haskell.org
 Homepage: http://www.haskell.org/cabal/
 Synopsis: A framework for packaging Haskell software
