Include the readme and the changelog in the tarball
20080612190558-adfee-aa6bba230197b292385ab310336445b43c3f7592.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -23,7 +23,9 @@ Build-Type: Custom
 -- that we build Setup.lhs using our own local Cabal source code.
 
 Extra-Source-Files:
-        mkGHCMakefile.sh Distribution/Simple/GHC/Makefile.in
+        README changelog
+        Distribution/Simple/GHC/mkGHCMakefile.sh
+        Distribution/Simple/GHC/Makefile.in
 
 Flag small_base
   Description: Choose the new smaller, split-up base package.
