Add compat InstalledPackageInfo types for older GHCs
We need these types for their Read instances so that we
can still read older GHCs package db files when we make
changes to the current InstalledPackageInfo type, or the
types contained in it, like PackageIdentifier or License.

20080621013727-adfee-9c0bab6b963b6adbe28ffdd157411e026c3fcc9d.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -97,5 +97,7 @@ Library
         Distribution.GetOpt,
         Distribution.Compat.TempFile
         Distribution.Simple.GHC.Makefile
+        Distribution.Simple.GHC.IPI641
+        Distribution.Simple.GHC.IPI642
 
   Extensions: CPP
