Add ModuleName as a new type instead of using String everywhere
20080626192939-adfee-c9edc16ae416e9d62ed932caee64349bab5200d2.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -54,6 +54,7 @@ Library
         Distribution.InstalledPackageInfo,
         Distribution.License,
         Distribution.Make,
+        Distribution.ModuleName,
         Distribution.Package,
         Distribution.PackageDescription,
         Distribution.PackageDescription.Configuration,
