Fix the build with GHC 6.4.2: Data.Map.alter doesn't exist
20080703001151-3fd76-c0280f5b5d59a76e1ac53b68e95b1d9d8b0dccd9.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -93,6 +93,7 @@ Library
 
   Other-Modules:
         Distribution.GetOpt,
+        Distribution.Compat.Map,
         Distribution.Compat.TempFile,
         Distribution.Simple.GHC.Makefile,
         Distribution.Simple.GHC.IPI641,
