If we have GHC >= 6.9 then use the new -optdep replacement flags
20080722163346-3fd76-1f4321e80bd459c8db452beda669d7712471e7ee.gz

--- a/Distribution/Simple/GHC/Makefile.in
+++ b/Distribution/Simple/GHC/Makefile.in
@@ -30,7 +30,7 @@ MKSTUBOBJS = find $(odir) -name "*_stub.$(osuf)" -print
 all :: $(odir)/.depend $(LIB)
 
 $(odir)/.depend : $(MAKEFILE)
-	$(GHC) -M -optdep-f -optdep$(odir)/.depend $(foreach way,$(WAYS),-optdep-s -optdep$(way)) $(foreach obj,$(MKDEPENDHS_OBJ_SUFFICES),-osuf $(obj)) $(filter-out -split-objs, $(GHC_OPTS)) $(modules)
+	$(GHC) -M $(GENERATE_DOT_DEPEND) $(foreach way,$(WAYS),-optdep-s -optdep$(way)) $(foreach obj,$(MKDEPENDHS_OBJ_SUFFICES),-osuf $(obj)) $(filter-out -split-objs, $(GHC_OPTS)) $(modules)
 	for dir in $(sort $(foreach mod,$(HS_OBJS) $(C_OBJS),$(dir $(mod)))); do \
 		if test ! -d $$dir; then mkdir -p $$dir; fi \
 	done
