When running "Setup makefile", put "default: all" at the top of the Makefile
This make "make" work even if Makefile.local contains any targets.

20080809211148-3fd76-67db83b63e4acd3f64c6a1d936d17e389982d11c.gz

--- a/Distribution/Simple/GHC/Makefile.in
+++ b/Distribution/Simple/GHC/Makefile.in
@@ -1,6 +1,8 @@
 # -----------------------------------------------------------------------------
 # Makefile template starts here.
 
+default: all
+
 GHC_OPTS += -i$(odir)
 
 # For adding options on the command-line
