Move Paths_pkgname and cabal_macros.h generation into their own modules
20080813193245-adfee-b9f086c5eaa78a3c5ab466f58ea34008ebba818c.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -62,6 +62,8 @@ Library
         Distribution.ReadE,
         Distribution.Simple,
         Distribution.Simple.Build,
+        Distribution.Simple.Build.Macros,
+        Distribution.Simple.Build.PathsModule,
         Distribution.Simple.BuildPaths,
         Distribution.Simple.Command,
         Distribution.Simple.Compiler,
