package concurrent not available in nhc98
20080902092802-6871e-3e0aca7235de34f7624b678aec88275c305897e6.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -41,7 +41,7 @@ Library
   if !flag(base3) && !flag(base4)
     Build-Depends: base       < 3
 
-  if flag(base4)
+  if flag(base4) && !impl(nhc98)
     Build-Depends: concurrent >= 0.1 && < 0.2
   if flag(base3) || flag(base4)
     Build-Depends: directory  >= 1   && < 1.1,
