Fix the permission that we give wrapper scripts
20080913124445-3fd76-676a64a756c0fc493f026ef6a5895857bf8aa46b.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -102,6 +102,7 @@ Library
   Other-Modules:
         Distribution.GetOpt,
         Distribution.Compat.Exception,
+        Distribution.Compat.Permissions,
         Distribution.Compat.TempFile,
         Distribution.Simple.GHC.Makefile,
         Distribution.Simple.GHC.IPI641,
