In "Setup makefile", don't build the vanilla way if it's disabled
This needs a bit of a kludge, as the vanilla way doesn't really exist
as far as the build system is concerned. It's just the absence of way.

20080913143132-3fd76-a5b7c9de18d698b06f5c57eec0d5a2c861298469.gz

--- a/Distribution/Simple/GHC/Makefile.in
+++ b/Distribution/Simple/GHC/Makefile.in
@@ -29,7 +29,11 @@ MKSTUBOBJS = find $(odir) -name "*_stub.$(osuf)" -print
 # HACK ^^^ we tried to use $(wildcard), but apparently it fails due to
 # make using cached directory contents, or something.
 
+# We have to jump through some hoops if we don't want the vanilla way,
+# as it's handled specially
+ifneq "$(way) $(VANILLA_WAY)" " NO"
 all :: $(odir)/.depend $(LIB)
+endif
 
 $(odir)/.depend : $(MAKEFILE)
 	$(GHC) -M $(GENERATE_DOT_DEPEND) $(foreach way,$(WAYS),-optdep-s -optdep$(way)) $(foreach obj,$(MKDEPENDHS_OBJ_SUFFICES),-osuf $(obj)) $(filter-out -split-objs, $(GHC_OPTS)) $(modules)
