Specify a source repository for Cabal in Cabal.cabal
20081001034325-adfee-3ad2f7a3c1ce1788412de939707d0d88e2035dec.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -27,6 +27,10 @@ Extra-Source-Files:
         Distribution/Simple/GHC/mkGHCMakefile.sh
         Distribution/Simple/GHC/Makefile.in
 
+source-repository head
+  type:     darcs
+  location: http://darcs.haskell.org/cabal/
+
 Flag base4
     Description: Choose the even newer, even smaller, split-up base package.
 
