Update the package description a bit
20081001034350-adfee-17ad909f383e02fc51846715807969466ca58d6e.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -14,9 +14,8 @@ Description:
         Libraries: a framework defining a common interface for authors to more
         easily build their Haskell applications in a portable way.
         .
-        The Haskell Cabal is meant to be a part of a larger infrastructure
-        for distributing, organizing, and cataloging Haskell libraries
-        and tools.
+        The Haskell Cabal is part of a larger infrastructure for distributing,
+        organizing, and cataloging Haskell libraries and tools.
 Category: Distribution
 Build-Type: Custom
 -- Even though we do use the default Setup.lhs it's vital to bootstrapping
