Add bug-reports field to Cabal.cabal
20081001035605-adfee-2120da98a55c93c4f631b2d59201aa40df0bcac3.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -8,6 +8,7 @@ Author: Isaac Jones <ijones@syntaxpolice.org>
         Duncan Coutts <duncan@haskell.org>
 Maintainer: cabal-devel@haskell.org
 Homepage: http://www.haskell.org/cabal/
+bug-reports: http://hackage.haskell.org/trac/hackage/
 Synopsis: A framework for packaging Haskell software
 Description:
         The Haskell Common Architecture for Building Applications and
