Add -no-auto-link-packages also to Makefile driven build
20081007095454-ed0c4-889ffc0c990a579734d6bcaaeec467c5f1bad04d.gz

--- a/Distribution/Simple/GHC/Makefile.in
+++ b/Distribution/Simple/GHC/Makefile.in
@@ -46,7 +46,7 @@ include $(odir)/.depend
 ifeq "$(way:%dyn=YES)" "YES"
 $(LIB) : $(HS_OBJS) $(C_OBJS)
 	@$(RM) $@
-	$(GHC) -shared -dynamic -o $@ $(C_OBJS) $(HS_OBJS) `$(MKSTUBOBJS)` $(LIB_LD_OPTS)
+	$(GHC) -shared -dynamic -no-auto-link-packages -o $@ $(C_OBJS) $(HS_OBJS) `$(MKSTUBOBJS)` $(LIB_LD_OPTS)
 else
 ifneq "$(filter -split-objs, $(GHC_OPTS))" ""
 $(LIB) : $(HS_OBJS) $(C_OBJS)
