xargs -s breaks solaris
Hopefully we can figure out a better fix for recent cygwin
versions of xargs which are apparently broken.

rolling back:

Wed Oct  8 08:44:10 PDT 2008  Clemens Fruhwirth <clemens@endorphin.org>
  * Also respect the max. command line size in Makefile driven builds

    M ./Distribution/Simple/GHC.hs -7 +13
    M ./Distribution/Simple/GHC/Makefile.hs -1 +1
    M ./Distribution/Simple/GHC/Makefile.in -1 +1

20081008185041-adfee-3ab26eb801ef88395018cf11b89275c644203ee6.gz

--- a/Distribution/Simple/GHC/Makefile.in
+++ b/Distribution/Simple/GHC/Makefile.in
@@ -51,7 +51,7 @@ else
 ifneq "$(filter -split-objs, $(GHC_OPTS))" ""
 $(LIB) : $(HS_OBJS) $(C_OBJS)
 	@$(RM) $@
-	(echo $(C_OBJS) `$(MKSTUBOBJS)`; find $(patsubst %.$(osuf),%_split,$(HS_OBJS)) -name '*.$(way_)o' -print) | xargs -s $(MAX_COMMAND_LINE_SIZE) $(AR) q $(EXTRA_AR_ARGS) $@
+	(echo $(C_OBJS) `$(MKSTUBOBJS)`; find $(patsubst %.$(osuf),%_split,$(HS_OBJS)) -name '*.$(way_)o' -print) | xargs $(AR) q $(EXTRA_AR_ARGS) $@
 else
 $(LIB) : $(HS_OBJS) $(C_OBJS)
 	@$(RM) $@
