--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -85,6 +85,7 @@ Library
         Distribution.Simple.Install,
         Distribution.Simple.InstallDirs,
         Distribution.Simple.JHC,
+        Distribution.Simple.LHC,
         Distribution.Simple.LocalBuildInfo,
         Distribution.Simple.NHC,
         Distribution.Simple.PackageIndex,
