--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -38,21 +38,17 @@ Flag base3
     Description: Choose the new smaller, split-up base package.
 
 Library
-  if flag(base4)
-    Build-Depends: base       >= 4   && < 5
+  build-depends:   base       >= 1   && < 5,
+                   filepath   >= 1   && < 1.2
+  if flag(base4) { build-depends: base >= 4 } else { build-depends: base < 4 }
+  if flag(base3) { build-depends: base >= 3 } else { build-depends: base < 3 }
   if flag(base3)
-    Build-Depends: base       >= 3   && < 4
-  if !flag(base3) && !flag(base4)
-    Build-Depends: base       < 3
-
-  if flag(base3) || flag(base4)
     Build-Depends: directory  >= 1   && < 1.1,
                    process    >= 1   && < 1.1,
                    old-time   >= 1   && < 1.1,
                    containers >= 0.1 && < 0.3,
                    array      >= 0.1 && < 0.3,
                    pretty     >= 1   && < 1.1
-  Build-Depends: filepath >= 1 && < 1.2
 
   ghc-options: -Wall
   if impl(ghc >= 6.8)
